added multiple pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="general.css">
     <script defer src="main.js"></script>
     <title>Document</title>
 </head>
@@ -22,10 +23,10 @@
                 </div>
                 <nav data-toggle="dropdown-nav" class="header-nav">
                     <ul class="nav-flex">
-                        <li class="active">Home</li>
-                        <li>Home</li>
-                        <li>Home</li>
-                        <li>Home</li>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="./gallery.html">Gallery</a></li>
                     </ul>
                 </nav>
             </div>
@@ -43,6 +44,7 @@
         </div>
         <div class="card clearfix">
             <div class="card-img">
+                <img src="./images/hotel-yard.jpg" alt="" srcset="">
             </div>
             <div class="card-wrapper">
                 <div class="card-content">
